[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/rect_tilemap.tres" type="TileSet" id=1]
[ext_resource path="res://src/Modules/Grid/World/GridNavigation.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Modules/Grid/World/TileGenerator.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/CityMap/CityMap.gd" type="Script" id=4]
[ext_resource path="res://assets/images/rect16.png" type="Texture" id=5]

[sub_resource type="TileSet" id=1]
0/name = "rect16.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="CityMap" type="Node2D"]
script = ExtResource( 4 )

[node name="Buildings" type="TileMap" parent="."]
modulate = Color( 0.741176, 0.615686, 0.615686, 1 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_tile_origin = 1
format = 1
tile_data = PoolIntArray( 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0 )

[node name="Roads" parent="." instance=ExtResource( 3 )]
modulate = Color( 0.737255, 0.317647, 0.317647, 1 )
tile_set = ExtResource( 1 )
probability = 1.0
noise_scale = 0.1

[node name="GridNavigation" parent="." instance=ExtResource( 2 )]

[node name="AmbulanceSlots" type="TileMap" parent="."]
modulate = Color( 0, 0, 1, 0.368627 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
cell_tile_origin = 1
format = 1
tile_data = PoolIntArray( 262147, 0, 0, 589836, 0, 0 )

[node name="Path" type="Line2D" parent="."]
width = 1.5
default_color = Color( 0.4, 0.501961, 1, 0.588235 )
